# SimpleBoostProject

./: .gitignore  CMakeLists.txt  README.md
src/: Boost.cpp  Boost.h  CMakeLists.txt
test/: CMakeLists.txt
test/Boost/: Boost.cpp
